--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
     "@types/fast-html-parser": "^1.0.0",
     "@types/node-fetch": "^2.5.7",
     "ts-node": "^9.0.0",
-    "typescript": "^4.0.3"
+    "typescript": "^4.0.3",
+    "dotenv": "^8.2.0",
+    "node-fetch": "^2.6.1"
   },
   "dependencies": {
-    "dotenv": "^8.2.0",
     "fast-html-parser": "^1.0.1",
-    "form-data": "^3.0.0",
-    "node-fetch": "^2.6.1"
+    "form-data": "^3.0.0"
   }
 }
