--- a/package.json
+++ b/package.json
@@ -1,25 +1,29 @@
 {
-  "name": "benedu-nodejs",
-  "version": "1.0.0",
+  "name": "@rycont/benedu-nodejs",
+  "version": "1.0.4",
   "description": "Unofficial Benedu API NodeJS Wrapper",
-  "main": "index.ts",
+  "main": "./dist/",
   "scripts": {
     "test": "ts-node ./src"
   },
-  "keywords": ["benedu", "dimigo"],
+  "keywords": [
+    "benedu",
+    "dimigo"
+  ],
   "author": "rycont",
   "license": "ISC",
   "devDependencies": {
     "@types/fast-html-parser": "^1.0.0",
     "@types/node-fetch": "^2.5.7",
-    "ts-node": "^9.0.0",
-    "typescript": "^4.0.3",
     "dotenv": "^8.2.0",
-    "node-fetch": "^2.6.1"
+    "node-fetch": "^2.6.1",
+    "ts-node": "^9.0.0",
+    "typescript": "^4.0.3"
   },
   "dependencies": {
     "fast-html-parser": "^1.0.1",
-    "form-data": "^3.0.0"
+    "form-data": "^3.0.0",
+    "util": "^0.12.3"
   },
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/"
