refactor : args is now object

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Unofficial Benedu API NodeJS Wrapper",
   "main": "./dist/",
   "scripts": {
-    "test": "ts-node ./src"
+    "test": "ts-node ./"
   },
   "keywords": [
     "benedu",
