--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@rycont/benedu-nodejs",
-  "version": "1.1.5",
+  "name": "benedu-nodejs",
+  "version": "1.1.6",
   "description": "Unofficial Benedu API NodeJS Wrapper",
   "main": "./dist/",
   "scripts": {
@@ -25,7 +25,7 @@
     "form-data": "^3.0.0",
     "util": "^0.12.3"
   },
-  "publishConfig": {
-    "registry": "https://npm.pkg.github.com/"
+  "repository": {
+    "url": "https://github.com/rycont/benedu-nodejs"
   }
 }
