--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "benedu-nodejs",
-  "version": "1.1.8",
+  "name": "@rycont/benedu-nodejs",
+  "version": "1.2.0",
   "description": "Unofficial Benedu API NodeJS Wrapper",
   "main": "./dist/",
   "scripts": {
@@ -31,5 +31,8 @@
   },
   "repository": {
     "url": "https://github.com/rycont/benedu-nodejs"
+  },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/rycont"
   }
 }
